--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "suggest": {
         "ext-fileinfo": "Improves mime type detection for files"
     },
+    "post-install-cmd": [
+        "chmod -R 777 public/"
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app",
